Removed 20+ material and previews